k8s/dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: ebarter.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/items/?(.*)
            pathType: Prefix
            backend:
              service:
                name: items-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 3000
          - path: /api/trades/?(.*)
            pathType: Prefix
            backend:
              service:
                name: trades-srv
                port:
                  number: 3000
          - path: /api/chats/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chats-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
